<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>cartpole_application</name>
  <version>0.0.0</version>

  <description>Gymnasium CartPole environment for Gazebo + ROS 2</description>

  <maintainer email="cm.minu10@uniandes.edu.co">Carlos Minu</maintainer>
  <license>Apache-2.0</license>

  <!-- IMPORTANT: Python build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-gymnasium</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
